rebase with master branch
finish code refactor

fix upon code review

minor fix

fix get subject in logInSession

HMAC256->ECDSA256, +random service for SecureRandom

fix upon code review

remove redundant init

add license

KeyService: init every time -> inject

rebase with master branch

finish code refactor

fix upon code review

minor fix

fix get subject in logInSession

add keyservice/partial verification service

rebase with master branch

finish code refactor

fix upon code review

minor fix

fix get subject in logInSession
