# src/main/resources/api.yaml
@@ -107,8 +107,8 @@ paths:
         - emails
         - description
       parameters:
-        - name: "token"
-          in: "query"
+        - name: "cookie"
+          in: "header"
           schema:
             type: string
           required: true
@@ -156,14 +156,17 @@ paths:
         After the new email is verified, the new one will replace the old one, and there will be only one email.
         If the account has only one unverified email, the new email will directly replace the old one.
       parameters:
+        - name: "cookie"
+          in: "header"
+          schema:
+            type: string
+          required: true
         - name: "token"
           in: "query"
           schema:
             type: string
           required: true
-          description: |
-            When updating password or email, the issue time of the token must be within 5 minutes.
-            Otherwise, any unexpired and valid token will work.
+
       requestBody:
         content:
           'application/json':
@@ -237,6 +240,12 @@ paths:
         Otherwise, try to use cookie to decide the identity. It should happen when the
         user is verifying an unverified email. Therefore, the email must be one of the
         unverified email of the account. Otherwise, 400 is returned.
+      parameters:
+        - name: "cookie"
+          in: "header"
+          schema:
+            type: string
+          required: true
       requestBody:
         content:
           'application/json':
@@ -313,6 +322,12 @@ paths:
           - Only need a valid and unexpired credential.
         - critical:
           - The credential must be valid and be issued in the last 5 minutes.
+      parameters:
+        - name: "cookie"
+          in: "header"
+          schema:
+            type: string
+          required: true
       requestBody:
         content:
           'application/json':
@@ -324,7 +339,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Session'
+                $ref: '#/components/schemas/Token'
         '400':
           description: Invalid request or credential too old.
           content:
